--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -89,5 +89,13 @@ width: 100%;
     z-index: 1030;
     overflow-y: auto;
   } 
-  
  
+  /*
+.search-dropdown{
+  display: block;
+  top: 50px;
+  left: -50;
+  inline-size: 206px;
+
+}
+*/
