--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -69,7 +69,7 @@
 }
 /*ראש עמוד*/
 .header{
-background-image: url('../images/background-Original.jpg');
+background-image: url('../images/Artboard\ 1.png');
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
@@ -101,12 +101,14 @@ h4{
   color: #539d9d;
 
 }
-/*לינקים עיצוב*/
+/* פירורי לחם לינקים עיצוב*/ 
 a.my-link {
   color: black;
   font-weight: bold;
   text-decoration: none;
 }
+
+
 
 /* כרטיסים עיצוב*/
 .card{
@@ -122,7 +124,20 @@ a.my-link {
   .card-body {
     background-color:#539d9d;
     transition: all 0.2s ease-in-out;
+ 
+
   }
+.card h5{
+  color: black;
+  text-decoration: none!important;
+ 
+}
+
+.card-text{
+  color: black;
+  text-decoration: none!important;
+}
+
   .card:hover .card-body {
     background-color: rgba(218, 207, 232, 0.8);
 
