--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -1,5 +1,6 @@
 ﻿body {
     direction: rtl;
+    background-color:white;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -112,23 +113,22 @@ a.my-link {
 
 /* כרטיסים עיצוב*/
 .card{
-  border-color: #539d9d;
---bs-card-border-width: 2px;
+  border-color: gray;
+--bs-card-border-width: 0px;
+box-shadow: 0px 0px 10px 0px gray;
 }
   .card:hover {
     transform: translateY(-10px);
-    box-shadow: 0px 0px 30px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 30px gray;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
   }
   .card-body {
-    background-color:#539d9d;
+    background-color:white;
     transition: all 0.2s ease-in-out;
- 
-
   }
 .card h5{
-  color: black;
+  color: #050505;
   text-decoration: none!important;
  
 }
@@ -137,11 +137,20 @@ a.my-link {
   color: black;
   text-decoration: none!important;
 }
+/*תגיות*/
+.badge {
+  --bs-badge-color: #000;
+background-color: #e1daf4;
+width: 30%;
+margin-inline-end: auto;
 
+}
+
+/*
   .card:hover .card-body {
     background-color: rgba(218, 207, 232, 0.8);
 
-  }
+  }*/
   
   /* תפריט ניווט*/
   .navbar {
@@ -166,7 +175,7 @@ a.my-link {
     transition: all 0.3s ease-in-out;
   } 
   .navbar-dark {
-    background-color: #539d9d;
+    background-color: #EBF4FF;
   }
   
   
@@ -180,6 +189,16 @@ a.my-link {
   }
   
 
+  .navbar-brand img {
+    max-width: 40%;
+    height: auto;
+  }
+  
+  @media (max-width: 767px) {
+    .navbar-brand img {
+      max-width: 40%;
+    }
+  }
   /*תמונה בתוך כרטיס בעמוד פנימי מסך גדול*/
 
 
