--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -6,16 +6,14 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  header {
-    height: auto;
-  }
-  .headerinpage{
-    height:180px;;
-  }
+
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {}
@@ -23,84 +21,59 @@
 @media screen and (max-width: 768px) {
 
   /* עיצוב כרטיסיות בעמוד פנימי מסך קטן*/
-  .cardInnerPage {
-    height: 115px;
-    flex-direction: column;
-    justify-content: space-between;
-    border-radius: 30px;
+  .card {
+    min-width: 280px;
   }
- .cardInnerPage img{
-    width: 30%;
-    float: right;
-    object-fit: cover;
-    border-radius: 20px;
- }
-
- .cardInnerPage-image-container {
-  padding: 20px;
-}
-
-.cardInnerPage-body {
-  float: left;
-  width: 30%;
-  display: flex;
-  flex-grow: 1;
-  flex-direction: row-reverse;
-}
-
-.cardInnerPage-text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
-}
-.cardInnerPage-body p {
-  overflow: hidden; /* Hide overflowing text */
-}
-
-.cardInnerPage-body h5 {
-  font-size: 14px;
-  white-space: nowrap; /* Prevent text from wrapping */
-}
-
-.cardInnerPage-body .text-truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 
 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+
+
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .headerinpage{
     height: 58vh;
   }
+
+  .header{
+    max-width: 100%;
+  }
+
+
 }
 
 @media (max-width: 1920px) {
   header {
     height: auto;
+    background-size: cover;
+    max-width: 100%;
+  }
   }
 
 
-}
+
 /*ראש עמוד*/
 .header{
-  font-family: 'Rubik', sans-serif;
+font-family: 'Rubik', sans-serif;
 background-image: url('../images/headerBack.png');
 background-repeat: no-repeat;
 background-size: cover;
-background-position: center;
-width: 100%;
+height: auto;
+/*background-position: center;*/
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
 
+.header img{
+  max-width: 70%;
+  height: auto;
+}
 
 .header h2 {
   color:#050505!important;
@@ -110,6 +83,32 @@ width: 100%;
 .header p {
   color: #0d0d0d !important;
 }
+
+/*footer start*/
+.footer{
+  background-image: url('../images/footer.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex; 
+}
+
+.footer a {
+  text-decoration: none;
+}
+.footerText{
+  padding-top: 10rem
+}
+
+.footer a.text-black {
+  font-size: 18px;
+  margin-right: 1rem;
+}
+.footer ul li {
+  font-size: 14px;
+}
+
+/*footer end*/
+
 
 
 .custom-btn {
@@ -140,6 +139,10 @@ a.my-link {
   border-color: gray;
 --bs-card-border-width: 0px;
 box-shadow: 0px 0px 10px 0px gray;
+border-radius: 30px;
+max-width:300px ;
+max-height:400px;
+min-height: 380px;
 }
   .card:hover {
     transform: translateY(-10px);
@@ -148,15 +151,22 @@ box-shadow: 0px 0px 10px 0px gray;
     cursor: pointer;
   }
   .card-body {
-    background-color:white;
     transition: all 0.2s ease-in-out;
-    height: 190px;
+  
   }
 .card h5{
   color: #050505;
   text-decoration: none!important;
  
 }
+
+.card img{
+  border-radius: 20px;
+  object-fit: cover;
+  padding: 20px 20px 0px 20px;
+}
+
+
 
 .card-text{
   color: black;
@@ -168,41 +178,37 @@ box-shadow: 0px 0px 10px 0px gray;
 background-color: #e1daf4;
 width: 30%;
 margin-inline-end: auto;
-
 }
 
-/*
-  .card:hover .card-body {
-    background-color: rgba(218, 207, 232, 0.8);
 
-  }*/
   
   /* תפריט ניווט*/
   .navbar {
     padding: 0.5rem 1rem;
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 9999;
   }
 
-  .navbar-brand {
+ /* .navbar-brand {
     font-weight: bold;
-  }
+  }*/
   
   .nav-link {
     font-size: 1.1rem;
     margin-right: 1rem;
+    color:#050505!important;
   }
  
   .nav-link:hover {
     transform: translateY(-2px);
     transition: all 0.3s ease-in-out;
   } 
-  .navbar-dark {
-    background-color: #EBF4FF;
+  .navbar-light {
+    background-color: #ebf4ff!important;
   }
-  
+
   
   .navbar-side-menu {
     position: fixed;
@@ -215,21 +221,21 @@ margin-inline-end: auto;
   
 
   .navbar-brand img {
-    max-width: 40%;
-    height: auto;
+    width: 70px; 
+    height: auto; 
   }
   
   @media (max-width: 767px) {
-    .navbar-brand img {
-      max-width: 40%;
+ .navbar-brand img {
+  width: 70px; 
+  height: auto; 
     }
   }
   /*תמונה בתוך כרטיס בעמוד פנימי מסך גדול*/
+ 
 
 
-  .cardInnerPage img{
-    border-radius: 20px;
- }
+
 
 
  
@@ -242,3 +248,73 @@ margin-inline-end: auto;
 
 }
 */
+
+/* ============ מסכים גדולים ============ */
+@media all and (min-width: 992px) {
+	.dropdown-menu li{ position: relative; 	}
+	.nav-item .submenu{ 
+		display: none;
+		position: absolute;
+		right:100%; top:-7px;
+	}
+	.nav-item .submenu-right{ 
+		right:100%; left:auto;
+	}
+	.dropdown-menu > li:hover{ background-color: #f1f1f1 }
+	.dropdown-menu > li:hover > .submenu{ display: block; }
+}	
+/* ============ מסכים גדולים// ============ */
+
+/* ============ מסך קטן ============ */
+@media (max-width: 991px) {
+  .dropdown-menu .dropdown-menu{
+      margin-left:0.7rem; margin-right:0.7rem; margin-bottom: .5rem;
+  }
+}	
+/* ============ מסך קטן/ ============ */
+
+/*-------------כרטיס הגדרות מסך מובייל*/
+
+  /* עיצוב כרטיסיות בעמוד פנימי מסך קטן*/
+  /* Media query for screens smaller than 768px */
+@media (max-width: 767px) {
+  .card-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-height: auto;
+    border-radius:10px;
+  }
+
+  .card img{
+    border-radius: 20px;
+    object-fit: cover;
+    padding: 10px 10px 10px 10px;
+  }
+
+  .card-img-top {
+    max-width: 40%;
+    float: right;
+  }
+
+  .card-body {
+    flex-grow: 1;
+    overflow: hidden; /* hide overflowing text */
+    padding: 1rem;
+  }
+
+  .card-title,
+  .card-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; /* truncate overflowing text with ellipsis */
+  }
+}
