--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -148,6 +148,13 @@ a.my-link {
   text-decoration: none;
 }
 
+.footer a{
+  color: black!important;
+  text-decoration: none!important;
+margin-right: 20px;
+}
+
+
 
 
 /* כרטיסים עיצוב*/
@@ -155,11 +162,18 @@ a.my-link {
   border-color: gray;
 --bs-card-border-width: 0px;
 box-shadow: 0px 0px 10px 0px gray;
-border-radius: 30px;
+border-radius: 20px;
 max-width:300px ;
 max-height:400px;
-min-height: 380px;
+min-height: 450px;
 }
+
+.cardInnerPage{
+  min-width: 200px;
+  min-height:380px;
+}
+
+
   .card:hover {
     transform: translateY(-10px);
     box-shadow: 0px 0px 30px gray;
@@ -290,13 +304,14 @@ margin-inline-end: auto;
 /*-------------כרטיס הגדרות מסך מובייל*/
 
   /* עיצוב כרטיסיות בעמוד פנימי מסך קטן*/
-  /* Media query for screens smaller than 768px */
+  /* */
 @media (max-width: 767px) {
   .card-wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
   }
 
   .card {
@@ -315,7 +330,7 @@ margin-inline-end: auto;
   }
 
   .card-img-top {
-    max-width: 40%;
+    max-width: 30%;
     float: right;
   }
 
