--- a/allTheRisesFolder/whatIsDataBaseRise/lib/icomoon.css
+++ b/allTheRisesFolder/whatIsDataBaseRise/lib/icomoon.css
@@ -453,3 +453,18 @@
 .icon-alert:before {
 	content: "\e96a";
 }
+
+/*----------עיצוב לרייז לרשימה נפתחת----*/
+.blocks-accordion__container{
+	direction: ltr!important;
+  }
+
+
+.blocks-accordion__title {
+	text-align: right!important;
+}
+
+.blocks-accordion p{
+	direction: rtl!important;
+
+}
