--- a/allTheRisesFolder/articleStructureRise/lib/icomoon.css
+++ b/allTheRisesFolder/articleStructureRise/lib/icomoon.css
@@ -453,3 +453,16 @@
 .icon-alert:before {
 	content: "\e96a";
 }
+/*----------עיצוב לרייז לרשימה נפתחת----*/
+.blocks-accordion__container{
+    direction: ltr!important;
+  }
+
+.blocks-accordion__title {
+    text-align: right!important;
+}
+
+.blocks-accordion p{
+    direction: rtl!important;
+
+}
