--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -180,6 +180,9 @@ max-width: 20%;
 
 .the-index-page-cards-container{
   margin-top: -5%;
+  max-width: 1200px; /* Adjust the value as per your requirements */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
