--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -61,7 +61,7 @@
 /*ראש עמוד*/
 .header{
 font-family: 'Rubik', sans-serif;
-background-image: url('../images/Group 245.svg');
+background-image: url('../images/Group 255.png');
 background-repeat: no-repeat;
 background-size: cover;
 height: auto;
