--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -85,7 +85,7 @@
 
 @media only screen and (min-width: 1281px) {
   header {
-    background-image: url('../images/group 269.png');
+    background-image: url('../images/Group 269.png');
   }
   header img {
     max-width: 12%!important;
