--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -260,6 +260,9 @@ min-height: 430px;
   min-width: 200px;
   min-height:380px;
 }
+.cardInnerPage .card-body{
+  min-height: 136px;
+}
 
 
   .card:hover {
@@ -447,10 +450,21 @@ margin-right: 18px;
   flex: 0 0 100%;
   max-width: 100%;
 }
-
+/*
 .card-text {
-  display: none; /* Hide the <p> text */
+  display: none; 
 }
+*/
+
+.cardInnerPage{
+  min-width: unset;
+ max-width: unset;
+
+}
+.cardInnerPage .card-body{
+  min-height: unset;
+}
+
 
 .card {
   min-width: 280px;
@@ -479,23 +493,28 @@ margin-right: 18px;
   }
 
   .card-img-top {
-    max-width: 30%;
+   
+    max-width: 35%;
     float: right;
   }
 
   .card-body {
     flex-grow: 1;
     overflow: hidden; /* להסתיר טקסט שיוצא מהמסגרת */
-    padding: 1rem;
+    padding: 0.7rem;
   }
 
  .card-title{
-  font-size: medium;
+  font-size: 18px;
  }
   .card-text {
-    white-space: nowrap;
+   
     overflow: hidden;
-    text-overflow: ellipsis; /* טקסט מיותר להסתיר */
+    text-overflow: ellipsis;
+    white-space: initial;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   .card-badge {
